<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_text">Welcome to DavCal Beans where Coffee and your tastebuds are our Main Priority! Create an Account, view our Menu or start a new Order. If you have any questions, please vist our Contact Page for options on how to contacts us. We are Happy you are here! Enjoy!</string>
    <string name="comp_name">Dav Cal Beans Co.</string>
    <string name="start_a_new_order">Start a New Order!</string>
    <string name="account">Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_message">Hi! We hope you find some coffee that might interest you! Anyways, you\'re here because you want to contact us; we are always happy to talk to new people so please do reach out to us whichever way is best for you! If you decide to email us, please allow us 24 hours to respond, thank you! We look forward to hearing from you!</string>
    <string name="menu">Menu</string>
    <string name="beans">Beans</string>
    <string name="half_half"><![CDATA[Half & Half]]></string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="start_order">Start Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>