<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="413dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/comp_name"
        android:textAlignment="center"
        android:textColor="#643200"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="81dp"
        android:fontFamily="sans-serif"
        android:padding="40dp"
        android:text="@string/welcome_text"
        android:textColor="#643200"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TVstart_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/home_image"
        android:layout_width="260dp"
        android:layout_height="217dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="76dp"
        android:contentDescription="home-coffee-image"
        app:layout_constraintBottom_toTopOf="@+id/welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/coffee_3142559_1280" />

    <TextView
        android:id="@+id/TVstart_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="28dp"
        android:text="@string/start_a_new_order"
        android:textColor="#643200"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>